--- a/src/pages/styles/ContactPage.css
+++ b/src/pages/styles/ContactPage.css
@@ -59,10 +59,10 @@
 
 .contact__form {
   min-width: 300px;
-  max-width: 500px;
+  max-width: 600px;
   padding:3rem;
   background-color: rgba(250, 235, 215, 0.049);
-  border-radius: 5px;
+  border-radius: 20px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -77,29 +77,61 @@
 }
 .contact__form-container {
   display: flex;
+  align-items: center;
   flex-direction: column;
-}
-
-
-.contact__form-group {
-  margin-bottom: var(--mr-4);
+  gap: 0.5em;
+  padding: 0em 2em;
+  min-width: 300px;
 }
 
 .contact__form-label {
   display: block;
+  color: var(--color-text);
+  font-size: 1.2em;
+  margin-bottom: 0.2em;
   
 }
 
 .contact__form-input {
-  width: 100%;
-  padding: 1rem;
-  font-size: 1.2rem;
-  font-weight: var(--font-semi-bold);
+  min-width: 300px;
+  padding: 0.5em 0.5em;
+  font-size: 1em;
+  font-weight: 700;
   border-radius: 5px;
-  background-color: var(--color-white-1);
-  border: 1px solid var(--color-white-2);
+  background-color: rgba(0, 0, 0, 0.203);
+  border: 1px solid var(--accent);
 }
 
 textarea {
   resize: none;
+}
+
+.contact__btn {
+  box-shadow: 0 0 0 0 var(--accent);
+  background-color: rgba(255, 255, 255, 0.065);
+    outline: 2px solid;
+    color: var(--color-text);
+    outline-color: var(--color-text);
+    cursor: pointer;
+    font-size: 1em;
+    font-weight: 600;
+    position: relative;
+    text-decoration: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 0.5em;
+    padding: 0.5em 1em;
+    border-radius: 45px;
+    transition: all 550ms cubic-bezier(
+        .36, .63, .5, .73
+    );
+  &:hover {
+    box-shadow: 0 0 0 2px var(
+        --accent
+    );
+    outline-color: rgba(255, 255, 255, 0);
+    outline-offset: 15px;
+    color: var(--accent);
+}
 }
