--- a/src/pages/styles/SkillsPage.css
+++ b/src/pages/styles/SkillsPage.css
@@ -1,5 +1,8 @@
 .skill__content{
-  margin-right: 3em;;
+  margin-right: 3em;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
 }
 
 .skill__info {
@@ -14,7 +17,6 @@
   color: var(--accent);
   font-size: 2.5em;
   text-align: center;
-  padding: 0em 2em;
 }
 .skill__text {
   color: var(--color-text);
@@ -40,6 +42,9 @@
 }
 
 @media (max-width: 750px) {
+  .skill__info {
+
+  }
   .skill__content{
     margin: 0;
   }
