--- a/src/pages/styles/ContactPage.css
+++ b/src/pages/styles/ContactPage.css
@@ -5,6 +5,7 @@
   justify-content: center;
   width: 100%;
   height: 100%;
+  margin: 0.5em
 }
 .section__title {
   color: var(--accent);
@@ -28,7 +29,7 @@
   border-radius: 30px;
   background-color: rgba(250, 235, 215, 0.049);
   gap: 1em;
-  min-width: 300px;
+  min-width: 250px;
   max-width: 450px;
 }
 .contact__info-title {
@@ -42,7 +43,7 @@
   color: var(--color-text);
   text-align: justify;
   padding: 1em;
-  font-size: 1em;
+  font-size: 1.3em;
   transition: all 550ms ease-in;
 }
 .contact__info-description:hover {
@@ -58,9 +59,9 @@
 }
 
 .contact__form {
-  min-width: 300px;
+  min-width: 250px;
   max-width: 600px;
-  padding:3rem;
+  padding:1em;
   background-color: rgba(250, 235, 215, 0.049);
   border-radius: 20px;
   display: flex;
