--- a/src/index.css
+++ b/src/index.css
@@ -33,7 +33,7 @@ input, button, select {
 }
 
 :root .light {
-  --accent: #03125a;
+  --accent: #ffffff;
   --color-text: rgb(15, 15, 15);
   --btn-header: #ffffff;
   background: linear-gradient(90deg, rgba(22,69,136,1) 0%, rgba(29,180,253,1) 58%,rgb(145, 144, 144) 100%);
