--- a/src/components/shared/styles/Header.css
+++ b/src/components/shared/styles/Header.css
@@ -23,12 +23,27 @@
   flex-direction: column;
   gap: 1em;
 }
+.Img {
+  justify-content: center;
+}
 .header__li {
   display: flex;
   align-items: center;
-  gap: 1em;
+  /* gap: 1em; */
   color: transparent;
   width: 100%;
+}
+.header__inter {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.content__list {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-direction: column;
+  gap: 5em;  
 }
 .header__icon {
   color: var(--btn-header);
@@ -47,7 +62,7 @@
   justify-content: center;
 }
 .header__logo {
-  width: 90%;
+  width: 100px;
 }
 
 
@@ -106,6 +121,10 @@
   color: white;
   cursor: pointer;
 }
+.nav__toggle {
+  display: none;
+  color: var(--accent);
+}
 
 @media (max-width: 576px) {
   .header__container {
@@ -119,21 +138,75 @@
     -webkit-backdrop-filter: blur(17px);
     border-bottom: 1px solid var(--accent);
     transition: none;
+    align-items: center;
+  }
+  .header__container:hover {
+    width: 0;
+  }
+  .header__container:hover .header__link {
+    display: block;
+  }
+
+  .Img {
+    display: contents;
+    width: 0;
   }
   .header__container:hover {
     width: 100vw;
   }
   .header__list {
-    flex-direction: row;
+    flex-direction: column;
+    width: 100%;
+    gap: 0;
+    text-align: center;
+  }
+  .header__icon {
+    display: none;
+  }
+  .header__link {
+    display: contents;
+    padding: 0.5em 0em;
+    width: 100%;
+  }
+  .header__li {
+    justify-content: center; 
+    padding: 0.5em 0em;
+  }
+  .header__li :hover {
+    background-color: rgba(115, 115, 115, 0.424);
+  }
+  .Img {
+    display: contents;
+    width: 0;
+  }
+  .nav__toggle {
+    display: contents;
+    font-size: 1.7em;
+    cursor: pointer;
+    &:hover {
+      color: var(--color-text);
+    }
+  }
+  .content__list {
+    display: none;
+  }
+  .buttons__container {
+    gap: 0;
+  }
+  .list__open {
+    display: block;
+    background-color: rgb(58, 58, 58);
+    border-bottom: 1px solid var(--accent);
+    flex-direction: column;
+    position: absolute;
+    left: 0;
+    top: 110px;
+    width: 100%;
+    height: 100vh;
+    z-index: 1;
+    box-shadow: 0 0.5em 0.5em 0.5em #99740420;
   }
   .container__btns {
-    flex-direction: row;
-  }
-  .header__logo {
-    height: 60%;
-    width: auto;
-  }
-  .header__container:hover .header__link {
-    display: none;
+    margin: 1em;
   }
 }
