--- a/src/App.css
+++ b/src/App.css
@@ -13,3 +13,11 @@
     padding-top: 130px;
   }
 }
+.container_components {
+  display: flex;
+  flex-direction: column;
+  padding-right: 2em;
+  align-items: center;
+  justify-content: center;
+  gap: 2em;
+}
